correction font-size collapse apart

--- a/src/pages/apart/apart.scss
+++ b/src/pages/apart/apart.scss
@@ -159,6 +159,9 @@
 
       .collapse {
         width: 50%;
+        h3 {
+          font-size: 18px;
+        }
       }
       .collapse__container {
         width: 100%;
